# Study_C_Lang

./: .gitignore  README.md  git_out.txt  staged_files.txt  study_summary.md
.obsidian/: community-plugins.json  graph.json  workspace.json
GroupStudy/: Insertion_Sort.cpp  Search.md  binSearch.cpp  boj1920.c  bubble_sort.cpp  practice_2751.c  selection_sort.cpp
MD/: VEDA Study.md
MD/Protocol/: I2C(Inter-Intergrated Circuit).md  IMU.md  MCU SoC 비교.md  MCU.md  OS 환경.md  SPI(Serial Peripheral Interface).md  SoC.md  UART(Universal Asynchronous Receiver Transmitter).md  UART, SPI, I2C 비교.md  면접준비.md  카메라 ISP.md
MD/Week1/Day 1/: CodeBase.md  Day 1.md  Intro(OT).md  QnA.md
MD/Week1/Day 2/: CodeBase.md  Day 2.md  QnA.md
MD/Week1/Day 3/: CodeBase.md  Day 3.md
MD/Week1/Day 4/: CodeBase.md  Day 4.md
MD/Week1/Day 5/: CodeBase.md  Day 5.md
MD/Week2/Day 10/: CodeBase.md  Day 10.md
MD/Week2/Day 6/: CodeBase.md  Day 6.md
MD/Week2/Day 7/: CodeBase.md  Day 7.md
MD/Week2/Day 8/: CodeBase.md  Day 8.md
MD/Week2/Day 9/: CodeBase.md  Day 9.md
MD/Week3/Day 11/: CodeBase.md  Day 11.md
MD/Week3/Day 12/: CodeBase.md  Day 12.md
MD/Week3/Day 13/: Day 13.md
MD/Week3/Day 14/: Day 14.md
MD/Week4/Day 16/: Day 16.md
MD/Week4/Day 17/: Day 17.md
MD/Week4/Day 18/: Day 18.md
MD/Week4/Day 19/: Day 19.md
MD/Week4/Day 20/: Day 20.md
MD/Week5/Day 21/: Day 21.md
MD/Week5/Day 22/: Day 22.md
MD/Week5/Day 24/: Day 24.md
MD/Week5/Day 25/: Day 25.md
MD/Week6/Day26/: Day26.md
MD/Week6/Day27/: Day27.md
MD/Week6/Day28/: Day28.md
MD/Week6/Day29/: Day29.md
practice/: ch3.c  ch4.c  ch5_1.c  ch5_2.c  ch5_3.c
workspace/Week1/Day1/: Day1.slnx  Day1.vcxproj  main.c
workspace/Week1/Day2/: Day2.slnx  Day2.vcxproj  day2.c
workspace/Week1/Day3/: Day3.slnx  Day3.vcxproj  main.c
workspace/Week1/Day4/: Day4.slnx  Day4.vcxproj  main.c
workspace/Week1/Day5/: Day5.vcxproj  main.c
workspace/Week2/CPPSolution/: CPPSolution.slnx
workspace/Week2/CPPSolution/Day8CppApp/: Day8CppApp.cpp  Day8CppApp.vcxproj  (+1 more)
workspace/Week2/Day10CppApp2Solution/: Day10CppApp2Solution.slnx
workspace/Week2/Day10CppAppSolution/: Day10CppAppSolution.slnx
workspace/Week2/Day6/: Day6.slnx  Day6.vcxproj  main.c
workspace/Week2/Day7/: Day7.vcxproj  main.c
workspace/Week2/Day8/: Day8.vcxproj  line.h  main.c  point.h
workspace/Week3/Day11CppAppSolution/: Day11CppAppSolution.slnx
workspace/Week3/Day12CppAppSolution/: Day11CppAppSolution.slnx
workspace/Week4/Day16/00_QCheckBox/: CMakeLists.txt  widget.cpp  widget.h
workspace/Week4/Day16/0_QCheckBox/: CMakeLists.txt
workspace/Week4/Day16/ConsoleApplication_CMake/: CMakeLists.txt  main.cpp
workspace/Week4/Day17/01_ComboBox/: CMakeLists.txt  widget.cpp  widget.h
workspace/Week5/: advanced_is_multiple.s  basic_operators.s  example.c  func_call.s  is_multiple.s  main.s  test.s
workspace/Week6/Day27/: led.cpp
(+269 files in other folders)
